# WishlistAI

./: README.md
wishlist-ai-backend/: .env  database.py  main.py  models.py  pyproject.toml  schemas.py
wishlist-ai-backend/alembic/: env.py
wishlist-ai-backend/alembic/versions/: 8be53c509a77_create_users_table.py
wishlist-ai-backend/routers/: auth.py
wishlist-ai-backend/utils/: security.py
wishlist-ai-frontend/: package-lock.json  package.json
wishlist-ai-frontend/app/: layout.tsx
wishlist-ai-frontend/app/(auth)/login/: page.tsx
wishlist-ai-frontend/app/(auth)/register/: page.tsx
wishlist-ai-frontend/app/actions/: auth.ts
